--- a/index.html
+++ b/index.html
@@ -16,14 +16,10 @@
         <li>List item 1</li>
         <li>List item 2</li>
     <ul>
-    <a href="#" class="button">Click me!</a>
+    <a href="#" class="button">am un conflict</a>
     
    
         
 
 </body>
 </html>
-
-
-
-
